Stretch: Fixed bug with image animation

--- a/css/index.css
+++ b/css/index.css
@@ -190,6 +190,7 @@ footer nav a:hover {
     justify-content: space-between;
 }
 .page-img {
+    position: relative;
     width: 100%;
     height: 153px;
     transition: box-shadow .33s ease-in-out;
@@ -203,6 +204,10 @@ footer nav a:hover {
     overflow: hidden;
 }
 .zoom img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     transform-origin: center;
     transition: transform 1s ease-in-out;
 }
@@ -210,7 +215,7 @@ footer nav a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, .25);
 }
 .zoom:hover img {
-    transform: scale(1.1, 1.1)
+    transform: translate(-50%, -50%) scale(1.1, 1.1)
 }
 
 header {
